# mensch-aergere-dich-nicht-3d

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Figur.h  ShaderUtils.h
include/GLRender/: Common.h  GLRenderDecl.h  RenderTriangle.h  ShaderProgram.h  lodepng.h
include/glad/: glad.h
shader/: background.frag  background.vert  shader.frag  shader.vert
src/: Board.cpp  Figur.cpp
src/lib/GLRender/: Common.cpp  GLRender.rc  RenderTriangle.cpp  ShaderProgram.cpp  lodepng.cpp  resource.h  resource_version.h  version.h.in
src/lib/glad/: glad.c
src/sample/GLSample/: GLSample.cpp
